--- a/main.css
+++ b/main.css
@@ -4,6 +4,85 @@
   
   body {
     font-family: 'Roboto', sans-serif;
+    background-image: url('images/snow-aspen-mountains.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    z-index: 0; 
+  }
+
+  /*.background {
+    background-image: url('images/snow-aspen-mountains.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: .5;
+  }*/
+
+  header {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background-color: black;
+    opacity: .8;
+    width: auto;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 20px;
+  }
+
+  header h1 {
+    color: white;
+  }
+
+  .weather-icon {
+    align-self: right;
+  }
+
+  /*.container {
+    position: relative;
+    background-color: white;
+    z-index: 1;
+    opacity: .8;
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 90%;
+    margin: 0 auto;
+  }*/
+
+  .form {
+    display: flex;
+    z-index: 2;
+    position: relative;
+    opacity: 1;
+    flex-direction: column;
+  }
+
+
+
+  .filters {
+    display: flex;
+    z-index: 2;
+    position: relative;
+    opacity: 1;
+    flex-direction: column;
+  }
+
+  .weather-trails {
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  label {
+    margin-right: 10px;
   }
 
   .title-link {
@@ -15,14 +94,13 @@
   button, input[type="text"] {
     padding: 5px;
   }
+
+  input[type="radio"] {
+    padding: 20px;
+  }
   
   button:hover {
     cursor: pointer;
-  }
-  
-  .container {
-    max-width: 600px;
-    margin: 0 auto;
   }
 
   ul {
@@ -36,3 +114,22 @@
   .hidden {
     display: none;
   }
+
+
+
+
+
+  @media all and (min-width: 600px){
+    .weather-trails {
+      flex-direction: row;
+    }
+
+    .form {
+      flex-direction: row;
+    }
+
+    .filters {
+      flex-direction: row;
+    }
+     
+ }
