--- a/main.css
+++ b/main.css
@@ -67,8 +67,9 @@
 
   h2 {
     text-align: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
-
 
 
   .filters {
@@ -93,14 +94,12 @@
     justify-content: space-between;
   }
 
+
+
   #trail-results p {
-    width: 50%;
+    width: 62%;
   }
 
-  /*div .trails .weather {
-    display: inline;
-    justify-content: center;
-  }*/
 
   section {
     margin: 30px;
@@ -118,7 +117,7 @@
 
 
   label {
-    margin-right: 10px;
+    margin-right: 5px;
   }
 
   .title-link {
@@ -129,6 +128,7 @@
   
   button, input[type="text"] {
     padding: 5px;
+    margin: 10px;
   }
 
   input[type="radio"] {
@@ -136,7 +136,7 @@
   }
   
   button:hover {
-    cursor: pointer;
+    cursor: crosshair;
   }
 
   ul {
