--- a/main.css
+++ b/main.css
@@ -12,20 +12,6 @@
     margin: 20px; padding: 0;
   }
 
-  /*.background {
-    background-image: url('images/snow-aspen-mountains.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: .5;
-  }*/
 
   header {
     display: flex;
@@ -59,16 +45,14 @@
 
   .form {
     display: flex;
-    z-index: 2;
     position: relative;
-    opacity: 1;
     flex-direction: column;
   }
 
   h2 {
     text-align: center;
     flex-wrap: wrap;
-    justify-content: space-between;
+    
   }
 
 
@@ -82,7 +66,7 @@
   .weather-trails {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     background-color: rgba(243, 242, 242, 0.88);
     padding: 10px;
     border-radius: 10px;
@@ -91,16 +75,17 @@
     margin-top: 25px;
   }
 
-.trails {
+/*.trails {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  max-width: 40%;
-}
+  max-width: 60%;
+}*/
 
-  /*#trail-results {
+  #trail-results {
     width: 62%;
-  }*/
+  }
 
   section {
     margin: 30px;
