--- a/main.css
+++ b/main.css
@@ -17,8 +17,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    background-color: black;
-    opacity: .8;
+    background-color: rgba(0, 0, 0, 0.7);
     width: auto;
     margin-bottom: 20px;
     padding: 10px;
@@ -75,14 +74,6 @@
     margin-top: 25px;
   }
 
-/*.trails {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 60%;
-}*/
-
   #trail-results {
     width: 62%;
   }
@@ -97,7 +88,6 @@
     margin-right: 30px;
     margin-bottom: 10px;
   }
-
 
 
   #map {
@@ -147,10 +137,7 @@
   input[type="radio"] {
     padding: 20px;
   }
-  
-  /*button:hover {
-    cursor: crosshair;
-  }*/
+
 
   ul {
     list-style: none;
