--- a/main.css
+++ b/main.css
@@ -26,8 +26,10 @@
 
   header h1 {
     color: white;
+    font-size: 40px;
+    text-align: center;
   }
-
+  
   .weather-icon {
     align-self: right;
   }
